--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -1609,8 +1609,21 @@
         {
             if(roles.includes("bm_it_access") != true)
             {
+                /*
                 alert("Access denied!");
                 window.location.href='index.html';
+                */
+
+                Swal.fire({
+                  title: 'Access denied',
+                  text: "Please contact me for access - github.com/jkbngl/trainingsplan",
+                  type: 'error',
+                  confirmButtonColor: '#3085d6',
+                  cancelButtonColor: '#d33',
+                  confirmButtonText: 'OK'
+                }).then((result) => {
+                    window.location.href='index.html';
+                })
             }
             else if(roles.includes("stats_access") != true)
             {
