--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -528,8 +528,21 @@
         {
             if(roles.includes("stats_access") != true)
             {
-                alert("Access denied!");
-                window.location.href='index.html';
+                //alert("Access denied!");
+                 
+                Swal.fire({
+                  title: 'Access denied',
+                  text: "Please contact me for access - github.com/jkbngl/trainingsplan",
+                  type: 'error',
+                  confirmButtonColor: '#3085d6',
+                  cancelButtonColor: '#d33',
+                  confirmButtonText: 'OK'
+                }).then((result) => {
+                    window.location.href='index.html';
+                })
+
+
+                //window.location.href='index.html';
             }
             else if(roles.includes("bm_it_access") != true)
             {
