#134 adapted longer than usual, poor internet connection text

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1088,7 +1088,7 @@
                 if(counter == 50)
                 {
                     swal.fire({
-                      title: 'This takes longer than usual, please be patient',
+                      title: 'This takes longer than usual, you might wanna check your internet connection!',
                       customClass: mobile_swal,
                       allowEscapeKey: false,
                       allowOutsideClick: false,
