#136 for index page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -478,8 +478,10 @@
             if(!superaccount)
             {
                 document.getElementById("stats-button").innerHTML = document.getElementById("stats-button").innerHTML + ' <i class="fas fa-lock"></i>'
+                document.getElementById("stats-button").style.opacity = .5;
                 //document.getElementById("stats-button").style.display = "none";         // Remove the stats button
                 document.getElementById("bm-button").innerHTML = document.getElementById("bm-button").innerHTML + ' <i class="fas fa-lock"></i>'
+                document.getElementById("bm-button").style.opacity = .5
                 //document.getElementById("bm-button").style.display = "none";         // Remove the stats button
                 document.getElementById("logout-button").style.marginTop = "20%";       // Add a matching margin to the button instead of stats which is not existent
                 maximum_allowed_plans = 2;                                              // Allow only two plans per not super user
@@ -489,15 +491,14 @@
             {
                 let text = document.getElementById("bm-button").innerHTML.replace(' <i class="fas fa-lock"></i>','');
                 document.getElementById("bm-button").innerHTML = text;
-
-                //document.getElementById("bm-button").style.display = "inline";         // Add the bm button
+                document.getElementById("bm-button").style.opacity = 1;
             }
 
             if(roles.indexOf("stats_access") > -1 && !superaccount)
             {
                 let text = document.getElementById("stats-button").innerHTML.replace(' <i class="fas fa-lock"></i>','');
                 document.getElementById("stats-button").innerHTML = text;
-                // document.getElementById("stats-button").style.display = "inline";      // Add the stats button
+                document.getElementById("stats-button").style.opacity = 1;
             }
 
             // if(document.getElementById("stats-button").style.display == "none" && document.getElementById("bm-button").style.display == "inline")
