--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -547,6 +547,7 @@
             else if(roles.includes("bm_it_access") != true)
             {
                 document.getElementById("bm-it-button").innerHTML = document.getElementById("bm-it-button").innerHTML + ' <i class="fas fa-lock"></i>'
+                document.getElementById("bm-it-button").style.opacity = .5;
                 // document.getElementById("bm-it-button").style.display = "none";
             }
             else
