#141 added legend callback

--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -1206,7 +1206,8 @@
                     //position: 'bottom',
                     labels: {
                         fontSize: 20
-                    }
+                    },
+                    onClick: (event, legendItem) => console.log(event, legendItem),
                 },
                 scales: {
                     yAxes: [{
