#141 removed part where potential label is added

--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -1360,7 +1360,8 @@
             for(var k = 0; k < max_num; k++)
                 local_labels_numbers.push(k);
             
-                local_labels_numbers.push("potential");
+                
+            // local_labels_numbers.push("potential");
             chart.data.labels = local_labels_numbers;
         }
 
