--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -1117,6 +1117,13 @@
 
     function change_chart()
     {
+        var meta_data_id = chart.getDatasetMeta(0).controller.chart.id;
+
+        for(let i = 0; i < chart.data.datasets.length; i++)
+        {
+            console.log(chart.data.datasets[i]['_meta'][meta_data_id].hidden);
+        }
+
         // Swap the chart type
         chart_type = chart.config.type == 'bar' ? 'line' : 'bar';
         chart.config.type = chart_type;
